# bldrx

./: .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_OUTLINE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  security_report.yml  support_question.yml
.github/workflows/: ci.yml  publish.yml
bldrx/: __init__.py  cli.py  engine.py
bldrx/templates/ci/: ci_metadata.json
bldrx/templates/github/: CODE_OF_CONDUCT.md.j2  CONTRIBUTING.md.j2  SUPPORT.md.j2  ci_metadata.json
bldrx/templates/lint/: ci_metadata.json
bldrx/templates/python-cli/: ci_metadata.json
bldrx/templates/react-app/: ci_metadata.json
docs/: ADVANCED_SCENARIOS.md  GETTING_STARTED.md  TEMPLATES.md
scripts/: ci_validate_templates.py  debug_preview_cli.py  debug_publish.py  generate_snapshots.py
tests/: conftest.py  test_cli_preview.py  test_template_snapshots.py
tests/snapshots/github/: CONTRIBUTING.md.j2.snap
tests/snapshots/python-cli/: README.md.j2.snap  src_main.py.j2.snap
